# Loop-Engineering-Study

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: adaptive-strategy.md  architecture.md  benchmark-suite.md  concepts.md  convergence-stopping.md  diagnosis-repair-loop.md  experiments.md  failure-modes.md  feedback-strategies.md  learning-path.md  memory-capacity.md  metrics.md  regression-gate.md  replay.md  sensitivity-analysis.md  trace-diagnostics.md
examples/: README.md
experiments/: __init__.py  _bootstrap.py  adaptive_strategy.py  basic_loop.py  benchmark_suite.py  convergence_stopping.py  diagnosis_repair_loop.py  failure_modes.py  feedback_strategies.py  memory_capacity.py  regression_gate.py  repair_loop.py  retry_loop.py  sensitivity_analysis.py  trace_diagnostics.py
loop_engineering/: __init__.py  actions.py  artifacts.py  cli.py  diagnostics.py  evaluators.py  memory.py  metrics.py  models.py  policies.py  runner.py  stopping.py  trace_store.py
tests/: test_actions.py  test_adaptive_strategy.py  test_artifacts.py  test_benchmark_suite.py  test_cli.py  test_convergence_stopping.py  test_diagnosis_repair_loop.py  test_diagnostics.py  test_evaluators.py  test_experiments.py  test_failure_modes.py  test_feedback_strategies.py  test_imports.py  test_memory.py  test_memory_capacity.py  test_metrics.py  test_models.py  test_packaging.py  test_policies.py  test_project_contract.py  test_regression_gate.py  test_runner.py  (+4 more)
(+52 files in other folders)
