[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-engineering-study"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
loop-engineering = "loop_engineering.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["loop_engineering*", "experiments*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
